third_party/move/move-compiler-v2/tests/more-v1/parser/expr_unary_negation.exp

Diagnostics:
error: unable to infer instantiation of type `i8|i16|i32|i64|i128|i256` (consider providing type arguments or annotating the type)
  ┌─ tests/more-v1/parser/expr_unary_negation.move:5:15
  │
5 │     assert!(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
  │               ^

error: unable to infer instantiation of type `i8|i16|i32|i64|i128|i256` (consider providing type arguments or annotating the type)
  ┌─ tests/more-v1/parser/expr_unary_negation.move:5:35
  │
5 │     assert!(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
  │                                   ^
